Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85972

[REG: 5.9->5.12]: When the height of a button goes below 31px then it will start to shift the button down instead of making it a square button so it can be made smaller

    XMLWordPrintable

Details

    • macOS
    • 637d5dd6b1f3a6974c3447042d48c71ef0bd695a (qt/qtbase/dev) 6299dc7f8895261099e5a9a84bd5c357c7e09af5 (qt/qtbase/6.2)

    Description

      [REG: 5.9->5.12]: When the height of a button goes below 31px then it will start to shift the button down instead of making it a square button so it can be made smaller. With the example attached, this can be reproduced by moving the bottom slider which changes the height

      Attachments

        For Gerrit Dashboard: QTBUG-85972
        # Subject Branch Project Status CR V

        Activity

          People

            vhilshei Volker Hilsheimer
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes